--- a/trunk/README
+++ b/trunk/README
@@ -59,14 +59,15 @@ Distributions packaging sreadahead should implement two components:
 2) at the end of the boot sequence, generate a pack file if needed
 
 Typically, the following line would be added to the top of
-/etc/rc.sysvinit (or equivalent):
+the "rc.sysvinit" script, or equivalent, such as "rcS" or "single" init.d
+script.
 
 	/sbin/sreadahead
 
 This will make sreadahead fork into the background and load an existing
 readahead.packed file, and then doing it's work.
 
-If the /etc/readahead.packed file is deleted, the init.d scripts would
+If the /etc/readahead.packed file is deleted, the init.d scripts should
 typically re-generate this file at the end of a clean boot by adding an
 /etc/rc5.d/S99sreadahead-pack script that typically does something like:
 
@@ -76,7 +77,7 @@ typically re-generate this file at the end of a clean boot by adding an
 	cd /tmp
 	find / -type f \( -fstype ext3 -o -fstype rootfs \) > \
 		readahead.packed.new
-	generate_filelist readahead.packed.new
+	sreadahead-pack readahead.packed.new
 	mv readahead.packed.new /etc/readahead.packed
 
 To update the pack file, one can simply remove /etc/readahead.packed and
